unpackaged/main/default/objects/Form__c/fields/Fall_Restraint_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Fall_Restraint_JSAPDF__c</fullName>
    <formula>INCLUDES(Fall_Protection__c,&quot;Fall Restraint&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fall Restraint</label>
    <type>Checkbox</type>
</CustomField>