unpackaged/main/default/objects/Form__c/fields/Flame_Resistant_Clothing__c.field-meta.xml
<CustomField>
    <fullName>Flame_Resistant_Clothing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flame Resistant Clothing</label>
    <type>Checkbox</type>
</CustomField>