unpackaged/main/default/objects/Form__c/fields/Flir_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Flir_Inspection__c</fullName>
    <label>FLIR Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>