unpackaged/main/default/objects/Form__c/fields/Flowline_inspected__c.field-meta.xml
<CustomField>
    <fullName>Flowline_inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Box will indicate if the flowline was inspected at the time of job.</description>
    <inlineHelpText>This Box will indicate if the flowline was inspected at the time of job.</inlineHelpText>
    <label>Flowline inspected</label>
    <type>Checkbox</type>
</CustomField>