unpackaged/main/default/objects/Form__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <formula>Name &amp; &#39; - &#39; &amp; RecordType.Name &amp; &#39; - &#39; &amp; TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &#39; - &#39; &amp; Owner:User.FirstName &amp; &#39; &#39; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Name</label>
    <type>Text</type>
</CustomField>