unpackaged/main/default/objects/Form__c/fields/Foul_Weather_Wear__c.field-meta.xml
<CustomField>
    <fullName>Foul_Weather_Wear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foul Weather Wear</label>
    <type>Checkbox</type>
</CustomField>