unpackaged/main/default/objects/Form__c/fields/Frac_Pond_Level_Inspection_del__c.field-meta.xml
<CustomField>
    <fullName>Frac_Pond_Level_Inspection_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frac Pond Level Inspection</label>
    <type>Checkbox</type>
</CustomField>