unpackaged/main/default/objects/Form__c/fields/FRC__c.field-meta.xml
<CustomField>
    <fullName>FRC__c</fullName>
    <formula>INCLUDES( X4_Additional_PPE__c , &quot;Fire Resistant Clothing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FRC</label>
    <type>Checkbox</type>
</CustomField>