unpackaged/main/default/objects/Form__c/fields/Gano_Pod_Frac_Chloride_level_Bottom__c.field-meta.xml
<CustomField>
    <fullName>Gano_Pod_Frac_Chloride_level_Bottom__c</fullName>
    <description>Gano Pod Frac Chloride level @ Bottom</description>
    <inlineHelpText>Gano Pod Frac Chloride level @ Bottom in PPM</inlineHelpText>
    <label>Gano Pod Test Chloride Level @ Bottom</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>