unpackaged/main/default/objects/Form__c/fields/Gano_Pod_Frac_Chloride_Level_Surface__c.field-meta.xml
<CustomField>
    <fullName>Gano_Pod_Frac_Chloride_Level_Surface__c</fullName>
    <description>Reading is in PPM</description>
    <inlineHelpText>Reading is in PPM</inlineHelpText>
    <label>Gano Pod Test Chloride Level  @ Surface</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>