unpackaged/main/default/objects/Form__c/fields/Gano_Pod_Frac_Chloride_lvl_Intermediate__c.field-meta.xml
<CustomField>
    <fullName>Gano_Pod_Frac_Chloride_lvl_Intermediate__c</fullName>
    <description>Gano Pod Frac Chloride lvl@ Intermediate</description>
    <inlineHelpText>Gano Pod Frac Chloride level @ Intermediate in PPM</inlineHelpText>
    <label>Gano Pod Test Chloride lvl@ Intermediate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>