unpackaged/main/default/objects/Form__c/fields/Gas_Calibration_Performed__c.field-meta.xml
<CustomField>
    <fullName>Gas_Calibration_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was Gas Calibration completed</inlineHelpText>
    <label>Gas Calibration Performed</label>
    <type>Checkbox</type>
</CustomField>