unpackaged/main/default/objects/Form__c/fields/Gas_Sample_Pulled__c.field-meta.xml
<CustomField>
    <fullName>Gas_Sample_Pulled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was Gas Sample Pulled</inlineHelpText>
    <label>Gas Sample Pulled</label>
    <type>Checkbox</type>
</CustomField>