unpackaged/main/default/objects/Form__c/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <description>Lat/ Long of location surveyed</description>
    <inlineHelpText>Audubon Form Atmospheric Corrosion</inlineHelpText>
    <label>Geo Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>