unpackaged/main/default/objects/Form__c/fields/Gloves__c.field-meta.xml
<CustomField>
    <fullName>Gloves__c</fullName>
    <label>Gloves</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Leather</fullName>
            </value>
            <value>
                <fullName>Impact Protection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>