unpackaged/main/default/objects/Form__c/fields/Gloves_Chemical_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Gloves_Chemical_JSAPDF__c</fullName>
    <formula>INCLUDES( Gloves__c , &quot;Chemical&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gloves Chemical</label>
    <type>Checkbox</type>
</CustomField>