unpackaged/main/default/objects/Form__c/fields/Gloves_Cotton_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Gloves_Cotton_JSAPDF__c</fullName>
    <formula>INCLUDES( Gloves__c , &quot;Cotton&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gloves Cotton</label>
    <type>Checkbox</type>
</CustomField>