unpackaged/main/default/objects/Form__c/fields/Gloves_Impact_Protection_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Gloves_Impact_Protection_JSAPDF__c</fullName>
    <formula>INCLUDES( Gloves__c , &quot;Impact Protection&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gloves Impact Protection</label>
    <type>Checkbox</type>
</CustomField>