unpackaged/main/default/objects/Form__c/fields/Gloves_Other_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Gloves_Other_JSAPDF__c</fullName>
    <formula>INCLUDES( Gloves__c , &quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gloves Other</label>
    <type>Checkbox</type>
</CustomField>