unpackaged/main/default/objects/Form__c/fields/Goggles_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Goggles_JSAPDF__c</fullName>
    <formula>INCLUDES(Eye_Protection__c, &quot;Goggles&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goggles</label>
    <type>Checkbox</type>
</CustomField>