unpackaged/main/default/objects/Form__c/fields/Goggles_or_Face_Shield__c.field-meta.xml
<CustomField>
    <fullName>Goggles_or_Face_Shield__c</fullName>
    <formula>INCLUDES( X4_Additional_PPE__c , &quot;Goggles or Faceshield&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goggles or Face Shield</label>
    <type>Checkbox</type>
</CustomField>