unpackaged/main/default/objects/Form__c/fields/Hard_Hat__c.field-meta.xml
<CustomField>
    <fullName>Hard_Hat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Hat</label>
    <type>Checkbox</type>
</CustomField>