unpackaged/main/default/objects/Form__c/fields/Hazard_Controls_2__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Controls_2__c</fullName>
    <label>Hazard Controls 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>