unpackaged/main/default/objects/Form__c/fields/Hazard_Controls__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Controls__c</fullName>
    <label>Hazard Controls</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>