unpackaged/main/default/objects/Form__c/fields/Hazardous_Substances__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Substances__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Substances</label>
    <type>Checkbox</type>
</CustomField>