unpackaged/main/default/objects/Form__c/fields/HE1_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>HE1_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HE1_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>