unpackaged/main/default/objects/Form__c/fields/HE2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>HE2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HE2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>