unpackaged/main/default/objects/Form__c/fields/Hearing_Protection__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Protection__c</fullName>
    <label>Hearing Protection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>