unpackaged/main/default/objects/Form__c/fields/Hearing_Protection_Double_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Protection_Double_JSAPDF__c</fullName>
    <formula>INCLUDES( Hearing_Protection__c , &quot;Double&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hearing Protection Double</label>
    <type>Checkbox</type>
</CustomField>