unpackaged/main/default/objects/Form__c/fields/Hearing_Protection_WP__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Protection_WP__c</fullName>
    <formula>INCLUDES( X4_Additional_PPE__c , &quot;Hearing Protection&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hearing Protection</label>
    <type>Checkbox</type>
</CustomField>