unpackaged/main/default/objects/Form__c/fields/High_Energy_High_Voltage__c.field-meta.xml
<CustomField>
    <fullName>High_Energy_High_Voltage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Energy / High Voltage</label>
    <type>Checkbox</type>
</CustomField>