unpackaged/main/default/objects/Form__c/fields/High_Noise__c.field-meta.xml
<CustomField>
    <fullName>High_Noise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Noise</label>
    <type>Checkbox</type>
</CustomField>