unpackaged/main/default/objects/Form__c/fields/HN3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>HN3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HN3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>