unpackaged/main/default/objects/Form__c/fields/House_Keeping_in_Order__c.field-meta.xml
<CustomField>
    <fullName>House_Keeping_in_Order__c</fullName>
    <label>House Keeping in Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>