unpackaged/main/default/objects/Form__c/fields/HS1_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>HS1_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HS1_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>