unpackaged/main/default/objects/Form__c/fields/HS3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>HS3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HS3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>