unpackaged/main/default/objects/Form__c/fields/I_acknowledge_I_have_reviewed_the_JSA__c.field-meta.xml
<CustomField>
    <fullName>I_acknowledge_I_have_reviewed_the_JSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I acknowledge I have reviewed the JSA</label>
    <type>Checkbox</type>
</CustomField>