unpackaged/main/default/objects/Form__c/fields/Identify_the_most_serious_potential_inju__c.field-meta.xml
<CustomField>
    <fullName>Identify_the_most_serious_potential_inju__c</fullName>
    <label>Identify most serious potential injury</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>