unpackaged/main/default/objects/Form__c/fields/If_electrical_has_try_been_performed__c.field-meta.xml
<CustomField>
    <fullName>If_electrical_has_try_been_performed__c</fullName>
    <label>If electrical, has try been performed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>