unpackaged/main/default/objects/Form__c/fields/If_first_attempt_not_successful_was_a_w__c.field-meta.xml
<CustomField>
    <fullName>If_first_attempt_not_successful_was_a_w__c</fullName>
    <label>If first attempt not successful, was a w</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>