unpackaged/main/default/objects/Form__c/fields/If_job_description_above_does_not_apply__c.field-meta.xml
<CustomField>
    <fullName>If_job_description_above_does_not_apply__c</fullName>
    <label>If job description above does not apply</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>