unpackaged/main/default/objects/Form__c/fields/Ignition_Sources__c.field-meta.xml
<CustomField>
    <fullName>Ignition_Sources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignition Sources</label>
    <type>Checkbox</type>
</CustomField>