unpackaged/main/default/objects/Form__c/fields/Inspect_chemical_pigging_well_head_con__c.field-meta.xml
<CustomField>
    <fullName>Inspect_chemical_pigging_well_head_con__c</fullName>
    <label>Inspect chemical, pigging, well head con</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>