unpackaged/main/default/objects/Form__c/fields/Inspection_Method_Monitoring_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Method_Monitoring_Instrument__c</fullName>
    <label>Inspection Method/Monitoring Instrument</label>
    <type>TextArea</type>
</CustomField>