unpackaged/main/default/objects/Form__c/fields/Interferences_encountered_accounted_for__c.field-meta.xml
<CustomField>
    <fullName>Interferences_encountered_accounted_for__c</fullName>
    <label>Interferences encountered accounted for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>