unpackaged/main/default/objects/Form__c/fields/Interferences_successfully_overcome__c.field-meta.xml
<CustomField>
    <fullName>Interferences_successfully_overcome__c</fullName>
    <label>Interferences successfully overcome?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>