unpackaged/main/default/objects/Form__c/fields/IS2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>IS2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>