unpackaged/main/default/objects/Form__c/fields/IS3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>IS3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>