unpackaged/main/default/objects/Form__c/fields/Isolation_Type__c.field-meta.xml
<CustomField>
    <fullName>Isolation_Type__c</fullName>
    <label>Isolation Type</label>
    <type>TextArea</type>
</CustomField>