unpackaged/main/default/objects/Form__c/fields/JSA_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>JSA_Form_Name__c</fullName>
    <formula>Form_Name__c &amp; &quot; - &quot; &amp; Work_Order__r.Asset.Name &amp; &quot; - &quot; &amp;  TEXT(Work_Order__r.Location__c ) &amp; &quot; - &quot; &amp; TEXT( Work_Order__r.Primary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JSA Form Name</label>
    <type>Text</type>
</CustomField>