unpackaged/main/default/objects/Form__c/fields/JSA_Location__c.field-meta.xml
<CustomField>
    <fullName>JSA_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations</valueSetName>
    </valueSet>
</CustomField>