unpackaged/main/default/objects/Form__c/fields/JSA_Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>JSA_Reviewer_Name__c</fullName>
    <label>JSA Reviewer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>