unpackaged/main/default/objects/Form__c/fields/JSA_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>JSA_Work_Type__c</fullName>
    <description>Work Type being Performed for JSA</description>
    <inlineHelpText>If you select other please use next box to best describe Work Type</inlineHelpText>
    <label>JSA Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALS Operations</fullName>
            </value>
            <value>
                <fullName>I&amp;E Maintenance Operations</fullName>
            </value>
            <value>
                <fullName>Normal Production Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipeline and Mechanical Operations</fullName>
            </value>
            <value>
                <fullName>Production Operations Open Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>