unpackaged/main/default/objects/Form__c/fields/LE2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>LE2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LE2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>