unpackaged/main/default/objects/Form__c/fields/LE3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>LE3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LE3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>