unpackaged/main/default/objects/Form__c/fields/Leak_placed_on_long_term_delayed_repair__c.field-meta.xml
<CustomField>
    <fullName>Leak_placed_on_long_term_delayed_repair__c</fullName>
    <label>Leak placed on long term delayed repair</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>