unpackaged/main/default/objects/Form__c/fields/LEL__c.field-meta.xml
<CustomField>
    <fullName>LEL__c</fullName>
    <label>LEL (0-10%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>