unpackaged/main/default/objects/Form__c/fields/Lifting_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lifting Equipment</label>
    <type>Checkbox</type>
</CustomField>