unpackaged/main/default/objects/Form__c/fields/Lifting_Equipment_Pick__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Equipment_Pick__c</fullName>
    <label>Lifting Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm lifting equipment condition and certification</fullName>
            </value>
            <value>
                <fullName>Obtain approval for lifts over processing equipment</fullName>
            </value>
            <value>
                <fullName>Have a documented and approved lift plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>