unpackaged/main/default/objects/Form__c/fields/List_Hazardous_Chemicals__c.field-meta.xml
<CustomField>
    <fullName>List_Hazardous_Chemicals__c</fullName>
    <label>List Hazardous Chemicals</label>
    <type>TextArea</type>
</CustomField>