unpackaged/main/default/objects/Form__c/fields/Location_of_leaks_detected__c.field-meta.xml
<CustomField>
    <fullName>Location_of_leaks_detected__c</fullName>
    <label>Location of leaks detected</label>
    <type>TextArea</type>
</CustomField>