unpackaged/main/default/objects/Form__c/fields/Location_of_Lock_Box__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Lock_Box__c</fullName>
    <label>Location of Lock Box:</label>
    <type>TextArea</type>
</CustomField>