unpackaged/main/default/objects/Form__c/fields/Manual_Handling__c.field-meta.xml
<CustomField>
    <fullName>Manual_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Handling</label>
    <type>Checkbox</type>
</CustomField>