unpackaged/main/default/objects/Form__c/fields/Manual_Handling_Pick__c.field-meta.xml
<CustomField>
    <fullName>Manual_Handling_Pick__c</fullName>
    <label>Manual Handling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assess manual handling task</fullName>
            </value>
            <value>
                <fullName>Limit load size</fullName>
            </value>
            <value>
                <fullName>Proper lifting technique</fullName>
            </value>
            <value>
                <fullName>Confirm stability of load and work platform</fullName>
            </value>
            <value>
                <fullName>Get assistance or mechanical aid to avoid pinch points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>