unpackaged/main/default/objects/Form__c/fields/MAX_Metal_Loss__c.field-meta.xml
<CustomField>
    <fullName>MAX_Metal_Loss__c</fullName>
    <description>Maximum metal loss measured (Mills)</description>
    <inlineHelpText>Maximum metal loss measured (Mills) During Atmospheric Corrosion Survey</inlineHelpText>
    <label>MAX Metal Loss</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>