unpackaged/main/default/objects/Form__c/fields/Max_viewing_distance_ft__c.field-meta.xml
<CustomField>
    <fullName>Max_viewing_distance_ft__c</fullName>
    <label>Max viewing distance (ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>