unpackaged/main/default/objects/Form__c/fields/Max_Wind_Speed_MPH__c.field-meta.xml
<CustomField>
    <fullName>Max_Wind_Speed_MPH__c</fullName>
    <label>Max Wind Speed (MPH)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>