unpackaged/main/default/objects/Form__c/fields/ME2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>ME2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ME2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>