unpackaged/main/default/objects/Form__c/fields/ME3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>ME3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ME3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>