unpackaged/main/default/objects/Form__c/fields/Metal_Loss_Mils__c.field-meta.xml
<CustomField>
    <fullName>Metal_Loss_Mils__c</fullName>
    <description>Measured metal loss in mils</description>
    <inlineHelpText>Measured metal loss in mils found during Atmospheric Corrosion survey</inlineHelpText>
    <label>Metal Loss (Mils)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>