unpackaged/main/default/objects/Form__c/fields/Method_of_Repair_Verification__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Repair_Verification__c</fullName>
    <label>Method of Repair Verification:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Method 21 Soap Bubbles</fullName>
            </value>
            <value>
                <fullName>OGI Camera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>