unpackaged/main/default/objects/Form__c/fields/MH2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>MH2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MH2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>