unpackaged/main/default/objects/Form__c/fields/Mobile_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Equipment</label>
    <type>Checkbox</type>
</CustomField>